# clickhouse-native-client

./: Cargo.toml  README.md  compose.yaml  rustfmt.toml
client/: Cargo.toml  README.md
client/src/: error.rs  lib.rs
client/src/binary/: decode.rs  encode.rs  mod.rs  read.rs  write.rs
client/src/protocol/: block.rs  client.rs  mod.rs  server.rs  value.rs
client/src/protocol/client/: data.rs  hello.rs  mod.rs  ping.rs  query.rs
client/tests/: hello.rs
client/tests/protocol/: hello.rs  mod.rs  ping.rs
datatypes/: Cargo.toml
pool/: Cargo.toml
