[package]
name = "clickhouse-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.5", features = ["full"] }
thiserror = "^1"
bytes = "^1"
tracing = "^0.1"
clickhouse-rs-cityhash-sys = "0.1.2"

[dev-dependencies]
anyhow = "^1"
tracing-subscriber = "^0.3"
tracing-test = {version="0.2.4", features = ["no-env-filter"]}
